--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,15 @@
         </nav>
     </section>
     <section id="aboutme">
-        <h2 class="colored">About me</h2>
+        <h2 class="colored">Me, myself and I.</h2>
         <p class="big">My name is Valentin, aka Vrock691 and I'm 17 years old. I learned to code by myself for two
-            years. I did some personal projects but I also participated in team projects. This is my personal website
-            where I put my projects, my skills and where
-            you can contact me. I wish you a good visit ^^</p>
+            years. I did some personal projects but I also like coding in teams ! I like web dev, UI design and the open
+            source community. Welcome on my personnal website where you can find some of my projects and my contact
+            details.</p>
     </section>
     <section id="myprojects">
         <h2 class="colored">My projects</h2>
-        <p class="big">Here are some of my projects, some of them are private, but you can find the public projects on
+        <p class="big">Here are some of my projects, you can find the code of some on
             my <a href="https://github.com/Vrock691">github</a> page.</p>
         <div class="wrapper">
             <div class="card project" id="pluméo">
@@ -41,7 +41,6 @@
                     chats security. It also respect your privacy. It's a team project I do with <a
                         href="https://github.com/Shawiizz">Shawiizz</a>. The source code is not
                     public but a website and a flutter apk will be available soon to use the app.</p>
-                <a class="link" href="./projects/plumeo.html">More about plumeo</a>
             </div>
             <div class="card project" id="manotesur20">
                 <img class="icon" src="./assets/manotesur20/20220212_154442.jpg" alt="">
@@ -76,7 +75,7 @@
         <p class="small">Some of my projects are not already here but will be soon...</p>
     </section>
     <section id="contact">
-        <h2 class="colored">Contact me</h2>
+        <h2 class="colored">Stay in touch !</h2>
         <p class="big">We can talk through :</p>
         <ul>
             <li>Discord : Vrock691#2511</li>
