changement de style en cours

--- a/public/index.html
+++ b/public/index.html
@@ -6,83 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vrock691</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./keyframes.css">
+    <link rel="stylesheet" href="./styles.css" class="css">
 </head>
 
 <body>
-    <section>
-        <header>
-            <img src="./My Post.png" alt="Vrock691">
-            <h1>Portfolio</h1>
-        </header>
-        <nav>
-            <a href="#aboutme">About me</a>
-            <a href="#myprojects">My projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </section>
-    <section id="aboutme">
-        <h2 class="colored">Me, myself and I.</h2>
-        <p class="big">My name is Valentin, aka Vrock691 and I'm 17 years old. I learned to code by myself for two
-            years. I did some personal projects but I also like coding in teams ! I like web dev, UI design and the open
-            source community. Welcome on my personnal website where you can find some of my projects and my contact
-            details.</p>
-    </section>
-    <section id="myprojects">
-        <h2 class="colored">My projects</h2>
-        <p class="big">Here are some of my projects, you can find the code of some on
-            my <a href="https://github.com/Vrock691">github</a> page.</p>
-        <div class="wrapper">
-            <div class="card project" id="pluméo">
-                <img class="icon" src="./assets/pluméo/20201109_105441.png" alt="">
-                <p class="title">Pluméo</p>
-                <p class="desc">Pluméo is a private messaging app project, with some fun features and also a strong
-                    chats security. It also respect your privacy. It's a team project I do with <a
-                        href="https://github.com/Shawiizz">Shawiizz</a>. The source code is not
-                    public but a website and a flutter apk will be available soon to use the app.</p>
-            </div>
-            <div class="card project" id="manotesur20">
-                <img class="icon" src="./assets/manotesur20/20220212_154442.jpg" alt="">
-                <p class="title">Ma note sur vingt</p>
-                <p class="desc">Ma note sur vingt is a small website where you can calculate your note over 20 instead
-                    of 13 or 25 or any other. It's my firts web project and it makes me use firebase hosting for the
-                    first time.</p>
-                <a class="link" href="https://manotesurvingt.web.app/">Go to the website</a>
-            </div>
-            <div class="card project" id="pourcentage">
-                <img class="icon" src="./assets/percentage/20220130_211359.jpg" alt="">
-                <p class="title">Pourcentage</p>
-                <p class="desc">Pourcentage is a small flutter app which calculate the new price of a product after a
-                    price reduction. You just have to put the price and the reduction rate and you have the new price of
-                    your article.
-                </p>
-                <a class="link" href="https://github.com/Vrock691/pourcentage">View project on github</a>
-            </div>
-            <div class="card project" id="spodeesync">
-                <svg class="icon" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px"
-                    height="50px">
-                    <path
-                        d="M25.009,1.982C12.322,1.982,2,12.304,2,24.991S12.322,48,25.009,48s23.009-10.321,23.009-23.009S37.696,1.982,25.009,1.982z M34.748,35.333c-0.289,0.434-0.765,0.668-1.25,0.668c-0.286,0-0.575-0.081-0.831-0.252C30.194,34.1,26,33,22.5,33.001c-3.714,0.002-6.498,0.914-6.526,0.923c-0.784,0.266-1.635-0.162-1.897-0.948s0.163-1.636,0.949-1.897c0.132-0.044,3.279-1.075,7.474-1.077C26,30,30.868,30.944,34.332,33.253C35.022,33.713,35.208,34.644,34.748,35.333z M37.74,29.193c-0.325,0.522-0.886,0.809-1.459,0.809c-0.31,0-0.624-0.083-0.906-0.26c-4.484-2.794-9.092-3.385-13.062-3.35c-4.482,0.04-8.066,0.895-8.127,0.913c-0.907,0.258-1.861-0.272-2.12-1.183c-0.259-0.913,0.272-1.862,1.184-2.12c0.277-0.079,3.854-0.959,8.751-1c4.465-0.037,10.029,0.61,15.191,3.826C37.995,27.328,38.242,28.388,37.74,29.193z M40.725,22.013C40.352,22.647,39.684,23,38.998,23c-0.344,0-0.692-0.089-1.011-0.275c-5.226-3.068-11.58-3.719-15.99-3.725c-0.021,0-0.042,0-0.063,0c-5.333,0-9.44,0.938-9.481,0.948c-1.078,0.247-2.151-0.419-2.401-1.495c-0.25-1.075,0.417-2.149,1.492-2.4C11.729,16.01,16.117,15,21.934,15c0.023,0,0.046,0,0.069,0c4.905,0.007,12.011,0.753,18.01,4.275C40.965,19.835,41.284,21.061,40.725,22.013z" />
-                </svg>
-                <p class="title">Spotify and Deezer Synchroniser</p>
-                <p class="desc">Spotify and Deezer Synchroniser is a little js app which synchronise your Deezer and
-                    your Spotify playlist, it compares the tracklists of two playlist of your choice and add the title
-                    which are not in the other playlist on each services.</p>
-            </div>
-
+    <header>
+        <div class="left">
+            <h1>Mon portfolio</h1>
         </div>
-        <p class="small">Some of my projects are not already here but will be soon...</p>
-    </section>
-    <section id="contact">
-        <h2 class="colored">Stay in touch !</h2>
-        <p class="big">We can talk through :</p>
-        <ul>
-            <li>Discord : Vrock691#2511</li>
-            <li>Email: <a href="mailto:vrock691@gmail.com">click to send an email</a></li>
-        </ul>
-        <p class="big">Don't forget to check my <a href="https://github.com/Vrock691">github</a> profile.</p>
-    </section>
+        <div class="middle">
+            <img src="./assets/Vrock691/My Post-1 (lightbrown).png" alt="">
+        </div>
+        <div class="right">
+            <div>
+                <a href="">Github</a>
+                <button id="contact" onclick="">Me contacter</button>
+            </div>
+        </div>
+    </header>
+    <nav>
+        <p style="color: #1A120B;">Navigation</p>
+        <a href="">Acceuil</a>
+        <a href="">Projets</a>
+        <a href="">Contact</a>
+    </nav>
 </body>
 
 </html>
