--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,23 @@
     </header>
     <nav>
         <p style="color: #1A120B;">Navigation</p>
-        <a href="">Acceuil</a>
+        <a style="color: #1A120B;" href="">Acceuil</a>
         <a href="">Projets</a>
         <a href="">Contact</a>
     </nav>
+    <section id="top">
+        <p class="balise">
+            &lt;aboutme&gt;
+        </p>
+        <p>
+            Salut ! Moi c'est Valentin aka Vrock691, j'aime le code, l'UI design et l'informatique en général,<br>Bienvenue sur mon
+            portfolio !
+        </p>
+        <p class="balise">&lt;/aboutme&gt;</p>
+    </section>
+    <section>
+        
+    </section>
 </body>
 
 </html>
