--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     </header>
     <nav>
         <p style="color: #1A120B;">Navigation</p>
+        <p>|</p>
         <a style="color: #1A120B;" href="">Acceuil</a>
         <a href="">Projets</a>
         <a href="">Contact</a>
@@ -35,14 +36,119 @@
             &lt;aboutme&gt;
         </p>
         <p>
-            Salut ! Moi c'est Valentin aka Vrock691, j'aime le code, l'UI design et l'informatique en général,<br>Bienvenue sur mon
-            portfolio !
+            Salut ! Moi c'est Valentin aka Vrock691, j'aime le code, l'UI design et l'informatique en
+            général,<br>Bienvenue sur mon portfolio !
         </p>
         <p class="balise">&lt;/aboutme&gt;</p>
         <p></p>
     </section>
-    <section>
-        
+    <section id="moreaboutme">
+
+        <div class="unit" id="formation">
+            <p class="title">Formation</p>
+            <ul>
+                <li>
+                    <p>Licence informatique</p>
+                    <p class="dates">2022 - 2025</p>
+                    <p class="details">Mineure économie gestion, photographie, science des données</p>
+                </li>
+                <li>
+                    <p>Baccalauréat Général</p>
+                    <p class="dates">2019 - 2022</p>
+                    <p class="details">Section européenne, mention bien</p>
+                </li>
+
+            </ul>
+        </div>
+        <div class="unit" id="certif">
+            <p class="title">Certifications</p>
+            <ul>
+                <li>
+                    <p>Microsoft Azure</p>
+                    <p class="dates">En cours de formation</p>
+                    <p class="details">Certification de connaissance du cloud Microsoft Azure</p>
+                </li>
+                <li>
+                    <p>Pix</p>
+                    <p class="dates">2023</p>
+                    <p class="details">Certification de connaissance en bureautique</p>
+                </li>
+                <li>
+                    <p>Cambridge English</p>
+                    <p class="dates">2022</p>
+                    <p class="details">Certification en Anglais, niveau B2</p>
+                </li>
+
+            </ul>
+        </div>
+        <div class="unit" id="languages">
+            <p class="title">Languages abordés</p>
+            <ul>
+                <li>
+                    <p>HTML, CSS, Javascript</p>
+                    <p class="details">Languages du web</p>
+                </li>
+                <li>
+                    <p>Flutter</p>
+                    <p class="details">Création d'application multiplateforme</p>
+                </li>
+                <li>
+                    <p>Python</p>
+                    <p class="details">Algorithmique et applications diverses</p>
+                </li>
+                <li>
+                    <p>Bash</p>
+                    <p class="details">Script en invite de commande sous GNU/Linux</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="unit" id="services">
+            <p class="title">Plateforme abordés</p>
+            <ul>
+                <li>
+                    <p>Play Console</p>
+                    <p class="details">Console pour la publication et la gestion de fiches d'applications pour le Google
+                        Play Store</p>
+                </li>
+                <li>
+                    <p>Firebase console et CLI</p>
+                    <p class="details">Plateforme de développement de projet et d'application de Google</p>
+                </li>
+                <li>
+                    <p>Github</p>
+                    <p class="details">Plateforme de gestion de versions et de developpement collaboratif en ligne par
+                        Microsoft.</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="unit" id="softwareandos">
+            <p class="title">Logiciel et OS utilisés</p>
+            <ul>
+                <li>
+                    <p>Visual Studio Code</p>
+                    <p class="details">IDE de développement par Microsoft</p>
+                </li>
+                <li>
+                    <p>Git</p>
+                    <p class="details">Logiciel de versionning</p>
+                </li>
+                <li>
+                    <p>GNU/linux</p>
+                    <p class="details">Système d'exploitation open source.<br>Distributions utilisés : Ubuntu, Manjaro,
+                        Fedora</p>
+                </li>
+            </ul>
+        </div>
+        <div class="unit" id="seeprojects">
+            <div>
+                <img src="" alt="">
+                <p class="title" style="font-size: larger;">Mes projets</p>
+                <a href="">Voir mes projets</a>
+            </div>
+
+        </div>
     </section>
 </body>
 
