--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,6 @@
         <p></p>
     </section>
     <section id="moreaboutme">
-
         <div class="unit" id="formation">
             <p class="title">Formation</p>
             <ul>
@@ -102,7 +101,6 @@
                 </li>
             </ul>
         </div>
-
         <div class="unit" id="services">
             <p class="title">Plateforme abordés</p>
             <ul>
@@ -143,11 +141,15 @@
         </div>
         <div class="unit" id="seeprojects">
             <div>
-                <img src="" alt="">
+                <p class="balise">&lt;/&gt;</p>
                 <p class="title" style="font-size: larger;">Mes projets</p>
                 <a href="">Voir mes projets</a>
             </div>
-
+        </div>
+    </section>
+    <section id="calltoaction">
+        <div class="bottom">
+            <p>Ce que je peux faire pour vous ?</p>
         </div>
     </section>
 </body>
