--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="right">
             <div>
-                <a href="">Github</a>
+                <a href="https://github.com/Vrock691">Github</a>
                 <button id="contact" onclick="">Me contacter</button>
             </div>
         </div>
@@ -149,9 +149,28 @@
     </section>
     <section id="calltoaction">
         <div class="bottom">
-            <p>Ce que je peux faire pour vous ?</p>
+            <div></div>
+            <div>
+                <p>Ce que je peux faire pour vous ?</p>
+
+            </div>
+            <div></div>
         </div>
     </section>
+    <nav class="bottomnav">
+        <div>
+            <img src="../public/assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app" style="height: 40px;">
+            <p>|</p>
+            <p>Bas de page</p>
+        </div>
+        <div style="display: flex; gap: 20px;">
+            <p style="color: #1A120B;">Navigation</p>
+            <p>|</p>
+            <a style="color: #1A120B;" href="">Acceuil</a>
+            <a href="">Projets</a>
+            <a href="">Contact</a>
+        </div>
+    </nav>
 </body>
 
 </html>
