--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,17 @@
         <div class="right">
             <div>
                 <a href="https://github.com/Vrock691">Github</a>
-                <button id="contact" onclick="">Me contacter</button>
+                <button id="contact" onclick="window.location.href='mailto:valentin.mary@proton.me';">Me
+                    contacter</button>
             </div>
         </div>
     </header>
     <nav>
-        <p style="color: #1A120B;">Navigation</p>
-        <p>|</p>
+        <p style="color: #1A120B;" class="mobilenone">Navigation</p>
+        <p class="mobilenone">|</p>
         <a style="color: #1A120B;" href="">Acceuil</a>
-        <a href="">Projets</a>
-        <a href="">Contact</a>
+        <a href="https://github.com/Vrock691?tab=repositories">Projets</a>
+        <a href="mailto:valentin.mary@proton.me">Contact</a>
     </nav>
     <section id="top">
         <p class="balise">
@@ -42,9 +43,24 @@
         <p class="balise">&lt;/aboutme&gt;</p>
         <p></p>
     </section>
+    <section id="calltoaction">
+        <div class="bottom">
+            <div></div>
+            <div>
+                <p>Vous êtes un recruteur ?</p>
+                <p><br>Que vous veniez de mon CV, de mon LinkedIn ou d'ailleurs, soyez les bienvenues sur ce site ! Je
+                    poste ici mes compétences, mes certifications ainsi que mes différents projets de développement en
+                    informatique. Cette page est en somme une sorte de blog personnel dédié à ma passion pour le
+                    code.<br><br>Si mon profil et mes compétences vous intéressent, n'hésitez pas à me contacter via la
+                    page contact ou avec mon LinkedIn.<br><br>Dans tous les cas de figure, je vous souhaite une agréable
+                    visite.</p>
+            </div>
+            <div></div>
+        </div>
+    </section>
     <section id="moreaboutme">
         <div class="unit" id="formation">
-            <p class="title">Formation</p>
+            <p class="title">Mes formations</p>
             <ul>
                 <li>
                     <p>Licence informatique</p>
@@ -60,12 +76,12 @@
             </ul>
         </div>
         <div class="unit" id="certif">
-            <p class="title">Certifications</p>
+            <p class="title">Mes certifications</p>
             <ul>
                 <li>
-                    <p>Microsoft Azure</p>
+                    <p>Microsoft Learn C#</p>
                     <p class="dates">En cours de formation</p>
-                    <p class="details">Certification de connaissance du cloud Microsoft Azure</p>
+                    <p class="details">Certification de connaissance du C# par Microsoft</p>
                 </li>
                 <li>
                     <p>Pix</p>
@@ -81,7 +97,7 @@
             </ul>
         </div>
         <div class="unit" id="languages">
-            <p class="title">Languages abordés</p>
+            <p class="title">Les languages que j'ai abordés</p>
             <ul>
                 <li>
                     <p>HTML, CSS, Javascript</p>
@@ -102,7 +118,7 @@
             </ul>
         </div>
         <div class="unit" id="services">
-            <p class="title">Plateforme abordés</p>
+            <p class="title">Les plateformes que j'ai abordés</p>
             <ul>
                 <li>
                     <p>Play Console</p>
@@ -122,7 +138,7 @@
         </div>
 
         <div class="unit" id="softwareandos">
-            <p class="title">Logiciel et OS utilisés</p>
+            <p class="title">Les logiciel et OS que j'ai utilisés</p>
             <ul>
                 <li>
                     <p>Visual Studio Code</p>
@@ -147,28 +163,20 @@
             </div>
         </div>
     </section>
-    <section id="calltoaction">
-        <div class="bottom">
-            <div></div>
-            <div>
-                <p>Ce que je peux faire pour vous ?</p>
 
-            </div>
-            <div></div>
-        </div>
-    </section>
     <nav class="bottomnav">
         <div>
-            <img src="../public/assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app" style="height: 40px;">
+            <img src="../public/assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app"
+                style="height: 40px;">
             <p>|</p>
             <p>Bas de page</p>
         </div>
         <div style="display: flex; gap: 20px;">
-            <p style="color: #1A120B;">Navigation</p>
-            <p>|</p>
+            <p style="color: #1A120B;" class="mobilenone">Navigation</p>
+            <p class="mobilenone">|</p>
             <a style="color: #1A120B;" href="">Acceuil</a>
-            <a href="">Projets</a>
-            <a href="">Contact</a>
+            <a href="https://github.com/Vrock691?tab=repositories">Projets</a>
+            <a href="mailto:valentin.mary@proton.me">Contact</a>
         </div>
     </nav>
 </body>
