--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <p style="color: #1A120B;" class="mobilenone">Navigation</p>
         <p class="mobilenone">|</p>
         <a style="color: #1A120B;" href="">Acceuil</a>
-        <a href="https://github.com/Vrock691?tab=repositories">Projets</a>
+        <a href="./projects.html">Projets</a>
         <a href="mailto:valentin.mary@proton.me">Contact</a>
     </nav>
     <section id="top">
@@ -159,14 +159,14 @@
             <div>
                 <p class="balise">&lt;/&gt;</p>
                 <p class="title" style="font-size: larger;">Mes projets</p>
-                <a href="">Voir mes projets</a>
+                <a href="./projects.html">Voir mes projets</a>
             </div>
         </div>
     </section>
 
     <nav class="bottomnav">
         <div>
-            <img src="../public/assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app"
+            <img src="./assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app"
                 style="height: 40px;">
             <p>|</p>
             <p>Bas de page</p>
@@ -175,7 +175,7 @@
             <p style="color: #1A120B;" class="mobilenone">Navigation</p>
             <p class="mobilenone">|</p>
             <a style="color: #1A120B;" href="">Acceuil</a>
-            <a href="https://github.com/Vrock691?tab=repositories">Projets</a>
+            <a href="./projects.html">Projets</a>
             <a href="mailto:valentin.mary@proton.me">Contact</a>
         </div>
     </nav>
