--- a/public/projects.html
+++ b/public/projects.html
@@ -35,9 +35,9 @@
     <section id="top">
         <p>Mes projets</p>
     </section>
-    
-    <section id="projects">
 
+    <section id="projects">
+        <p>cdsdfsd</p>
     </section>
 
     <nav class="bottomnav">
@@ -56,7 +56,7 @@
     </nav>
 
     <script>
-        
+
     </script>
 </body>
 
