--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,6 @@
             général,<br>Bienvenue sur mon portfolio !
         </p>
         <p class="balise">&lt;/aboutme&gt;</p>
-        <p></p>
     </section>
     <section id="calltoaction">
         <div class="bottom">
@@ -166,8 +165,7 @@
 
     <nav class="bottomnav">
         <div>
-            <img src="./assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app"
-                style="height: 40px;">
+            <img src="./assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app" style="height: 40px;">
             <p>|</p>
             <p>Bas de page</p>
         </div>
