--- a/public/projects.html
+++ b/public/projects.html
@@ -36,8 +36,62 @@
         <p>Mes projets</p>
     </section>
 
-    <section id="projects">
-        <p>cdsdfsd</p>
+    <section class="projects">
+        <div class="project" id="edt_iut_périgueux">
+            <div class="title">
+                <img src="./assets/iutpéri/20230124_131738.jpg" alt="">
+                <p>EDT IUT Périgueux</p>
+            </div>
+            <p>EDT IUT Périgueux est une application flutter disponible sur le play store. Elle est dédiée aux étudiant
+                de l'iut de Périgueux. Son but est de récupèrer les données d'emploi du temps depuis le site officiel et
+                les organiser dans un widget de calendrier facilement utilisable par l'utilisateur.</p>
+            <div class="button">
+                <a href="https://play.google.com/store/apps/details?id=fr.vrock691.sattelysreader.iutperigueux">Voir sur le Play Store</a>
+            </div>
+        </div>
+        <div class="project" id="pourcentage">
+            <div class="title">
+                <img src="./assets/percentage/20220130_211359.jpg" alt="">
+                <p>Pourcentage</p>
+            </div>
+            <p>Pourcentage est une application flutter à code source ouvert disponible sur Github et prochainement sur
+                le Play Store. Son objectif est de calculer le prix d'un produit après une réduction en pourcentage.</p>
+            <div class="button">
+                <a href="https://github.com/Vrock691/pourcentage">Voir sur Github</a>
+            </div>
+        </div>
+        <div class="project" id="spotifysync">
+            <div class="title">
+                <img src="./assets/spotify/Spotify-PNG-Logo-1536x1534.webp" alt="">
+                <p>Spotify sync</p>
+            </div>
+            <p>Spotify sync était un script javascript qui synchronisait les playlist spotify et deezer de son
+                utilisateur. En dialogant avec les API des deux services, il comparait les tracklist et ajoutait de part
+                et d'autres les titres manquants.</p>
+            <div class="button">
+                <p>Code non disponible</p>
+            </div>
+        </div>
+        <div class="project" id="plumeo">
+            <div class="title">
+                <img src="./assets/pluméo/20201109_105441.png" alt="">
+                <p>Pluméo</p>
+            </div>
+            <p>Pluméo était un projet de messagerie sécurisé mené pendant 2 ans avec <a href="https://github.com/Shawiizz">Shawiizz</a>. Entièrement codé pour le web, elle était multiplateforme et prennait en charge les messages textes, audios et les appels audios et vidéos par WebRTC. Ce projet est toujours en cours de développement mais uniquement dans le cadre des études de Shawiizz.</p>
+            <div class="button">
+                <a href="https://plumeo.tk/">Voir le site (hors ligne)</a>
+            </div>
+        </div>
+        <div class="project" id="manotesurvingt">
+            <div class="title">
+                <img src="./assets/manotesur20/20220212_154442.jpg" alt="">
+                <p>Ma note sur vingt</p>
+            </div>
+            <p>Ma note sur vingt est un petit projet web hebergé avec Firebase. Ce site sert à convertir n'importe quelle note sur vingt.</p>
+            <div class="button">
+                <a href="https://manotesurvingt.web.app/">Voir le site</a>
+            </div>
+        </div>
     </section>
 
     <nav class="bottomnav">
