--- a/public/projects.html
+++ b/public/projects.html
@@ -32,7 +32,7 @@
         <a style="color: #1A120B;" href="">Projets</a>
         <a href="mailto:valentin.mary@proton.me">Contact</a>
     </nav>
-    <section id="top">
+    <section id="top_titleonly">
         <p>Mes projets</p>
     </section>
 
