--- a/public/projects.html
+++ b/public/projects.html
@@ -37,6 +37,19 @@
     </section>
 
     <section class="projects">
+        <div class="project" id="vldschool">
+            <div class="title">
+                <img src="./assets/vld/logopngwhite.png" alt="">
+                <p>VLD school</p>
+            </div>
+            <p>VLD school est un projet de site internet en cours de développement, il proposera des formations sur des
+                sujets informatiques tel que des cours sur Python, Blender, etc. Je mène ce projet en équipe avec <a
+                href="https://github.com/Kez0X">Kez0X</a> et <a
+                href="https://github.com/Davidbld">Davidbld</a>.</p>
+            <div class="button">
+                <p>En cours de développement</p>
+            </div>
+        </div>
         <div class="project" id="edt_iut_périgueux">
             <div class="title">
                 <img src="./assets/iutpéri/20230124_131738.jpg" alt="">
@@ -46,7 +59,8 @@
                 de l'iut de Périgueux. Son but est de récupèrer les données d'emploi du temps depuis le site officiel et
                 les organiser dans un widget de calendrier facilement utilisable par l'utilisateur.</p>
             <div class="button">
-                <a href="https://play.google.com/store/apps/details?id=fr.vrock691.sattelysreader.iutperigueux">Voir sur le Play Store</a>
+                <a href="https://play.google.com/store/apps/details?id=fr.vrock691.sattelysreader.iutperigueux">Voir sur
+                    le Play Store</a>
             </div>
         </div>
         <div class="project" id="pourcentage">
@@ -77,7 +91,11 @@
                 <img src="./assets/pluméo/20201109_105441.png" alt="">
                 <p>Pluméo</p>
             </div>
-            <p>Pluméo était un projet de messagerie sécurisé mené pendant 2 ans avec <a href="https://github.com/Shawiizz">Shawiizz</a>. Entièrement codé pour le web, elle était multiplateforme et prennait en charge les messages textes, audios et les appels audios et vidéos par WebRTC. Ce projet est toujours en cours de développement mais uniquement dans le cadre des études de Shawiizz.</p>
+            <p>Pluméo était un projet de messagerie sécurisé mené pendant 2 ans avec <a
+                    href="https://github.com/Shawiizz">Shawiizz</a>. Entièrement codé pour le web, elle était
+                multiplateforme et prennait en charge les messages textes, audios et les appels audios et vidéos par
+                WebRTC. Ce projet est toujours en cours de développement mais uniquement dans le cadre des études de
+                Shawiizz.</p>
             <div class="button">
                 <a href="https://plumeo.tk/">Voir le site (hors ligne)</a>
             </div>
@@ -87,7 +105,8 @@
                 <img src="./assets/manotesur20/20220212_154442.jpg" alt="">
                 <p>Ma note sur vingt</p>
             </div>
-            <p>Ma note sur vingt est un petit projet web hebergé avec Firebase. Ce site sert à convertir n'importe quelle note sur vingt.</p>
+            <p>Ma note sur vingt est un petit projet web hebergé avec Firebase. Ce site sert à convertir n'importe
+                quelle note sur vingt.</p>
             <div class="button">
                 <a href="https://manotesurvingt.web.app/">Voir le site</a>
             </div>
