small change in a element

--- a/public/projects.html
+++ b/public/projects.html
@@ -122,8 +122,8 @@
         <div style="display: flex; gap: 20px;">
             <p style="color: #1A120B;" class="mobilenone">Navigation</p>
             <p class="mobilenone">|</p>
-            <a style="color: #1A120B;" href="">Acceuil</a>
-            <a href="https://github.com/Vrock691?tab=repositories">Projets</a>
+            <a href="">Acceuil</a>
+            <a style="color: #1A120B;" href="https://github.com/Vrock691?tab=repositories">Projets</a>
             <a href="mailto:valentin.mary@proton.me">Contact</a>
         </div>
     </nav>
