Fix: grammar mistakes

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <nav>
         <p style="color: #1A120B;" class="mobilenone">Navigation</p>
         <p class="mobilenone">|</p>
-        <a style="color: #1A120B;" href="">Acceuil</a>
+        <a style="color: #1A120B;" href="">Accueil</a>
         <a href="./projects.html">Projets</a>
         <a href="mailto:valentin.mary@proton.me">Contact</a>
     </nav>
@@ -172,7 +172,7 @@
         <div style="display: flex; gap: 20px;">
             <p style="color: #1A120B;" class="mobilenone">Navigation</p>
             <p class="mobilenone">|</p>
-            <a style="color: #1A120B;" href="">Acceuil</a>
+            <a style="color: #1A120B;" href="">Accueil</a>
             <a href="./projects.html">Projets</a>
             <a href="mailto:valentin.mary@proton.me">Contact</a>
         </div>
