--- a/public/projects.html
+++ b/public/projects.html
@@ -28,7 +28,7 @@
     <nav>
         <p style="color: #1A120B;" class="mobilenone">Navigation</p>
         <p class="mobilenone">|</p>
-        <a href="./index.html">Acceuil</a>
+        <a href="./index.html">Accueil</a>
         <a style="color: #1A120B;" href="">Projets</a>
         <a href="mailto:valentin.mary@proton.me">Contact</a>
     </nav>
@@ -122,7 +122,7 @@
         <div style="display: flex; gap: 20px;">
             <p style="color: #1A120B;" class="mobilenone">Navigation</p>
             <p class="mobilenone">|</p>
-            <a href="">Acceuil</a>
+            <a href="">Accueil</a>
             <a style="color: #1A120B;" href="https://github.com/Vrock691?tab=repositories">Projets</a>
             <a href="mailto:valentin.mary@proton.me">Contact</a>
         </div>
