feat: Ajout nouveaux projets et langages

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vrock691</title>
+    <title>Valentin Mary - Vrock691</title>
     <link rel="stylesheet" href="./styles.css" class="css">
 </head>
 
@@ -46,12 +46,11 @@
         <div class="bottom">
             <div></div>
             <div>
-                <p>Vous êtes un recruteur ?</p>
-                <p><br>Que vous veniez de mon CV, de mon LinkedIn ou d'ailleurs, soyez les bienvenues sur ce site ! Je
+                <p><br>Soyez les bienvenues sur ce site ! Je
                     poste ici mes compétences, mes certifications ainsi que mes différents projets de développement en
                     informatique. Cette page est en somme une sorte de blog personnel dédié à ma passion pour le
-                    code.<br><br>Si mon profil et mes compétences vous intéressent, n'hésitez pas à me contacter via la
-                    page contact ou avec mon LinkedIn.<br><br>Dans tous les cas de figure, je vous souhaite une agréable
+                    code.<br><br>Si mon profil et mes compétences vous intéressent, n'hésitez pas à me contacter via le bouton
+                    contact ou avec mon LinkedIn.<br><br>Dans tous les cas de figure, je vous souhaite une agréable
                     visite.</p>
             </div>
             <div></div>
@@ -62,9 +61,9 @@
             <p class="title">Mes formations</p>
             <ul>
                 <li>
-                    <p>Licence informatique</p>
+                    <p>Licence informatique (2e année)</p>
                     <p class="dates">2022 - 2025</p>
-                    <p class="details">Mineure économie gestion, photographie, science des données</p>
+                    <p class="details">Mineure économie gestion, création numérique, science des données</p>
                 </li>
                 <li>
                     <p>Baccalauréat Général</p>
@@ -92,23 +91,30 @@
                     <p class="dates">2022</p>
                     <p class="details">Certification en Anglais, niveau B2</p>
                 </li>
-
             </ul>
         </div>
         <div class="unit" id="languages">
-            <p class="title">Les languages que j'ai abordés</p>
+            <p class="title">Langages maitrisés</p>
             <ul>
                 <li>
                     <p>HTML, CSS, Javascript</p>
-                    <p class="details">Languages du web</p>
+                    <p class="details">Langages du web</p>
                 </li>
                 <li>
                     <p>Flutter</p>
                     <p class="details">Création d'application multiplateforme</p>
                 </li>
                 <li>
+                    <p>Mysql</p>
+                    <p class="details">Langage des bases de données</p>
+                </li>
+                <li>
                     <p>Python</p>
                     <p class="details">Algorithmique et applications diverses</p>
+                </li>
+                <li>
+                    <p>C</p>
+                    <p class="details">Algorithmique</p>
                 </li>
                 <li>
                     <p>Bash</p>
@@ -120,6 +126,10 @@
             <p class="title">Les plateformes que j'ai abordés</p>
             <ul>
                 <li>
+                    <p>Nginx</p>
+                    <p class="details">En tant que reverse proxy pour déployer des sites internet.</p>
+                </li>
+                <li>
                     <p>Play Console</p>
                     <p class="details">Console pour la publication et la gestion de fiches d'applications pour le Google
                         Play Store</p>
@@ -129,7 +139,7 @@
                     <p class="details">Plateforme de développement de projet et d'application de Google</p>
                 </li>
                 <li>
-                    <p>Github</p>
+                    <p>Github et Github Actions/p>
                     <p class="details">Plateforme de gestion de versions et de developpement collaboratif en ligne par
                         Microsoft.</p>
                 </li>
