--- a/public/projects.html
+++ b/public/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vrock691</title>
+    <title>Mes projets</title>
     <link rel="stylesheet" href="./styles.css" class="css">
 </head>
 
@@ -37,6 +37,30 @@
     </section>
  
     <section class="projects">
+        <div class="project" id="radiotalk">
+            <div class="title">
+                <img src="./assets/radiotalk/logoradiotalk.jpeg" alt="">
+                <p>RadioTalk</p>
+            </div>
+            <p>RadioTalk est un mini projet qui permet à deux appareils d'échanger des fichiers audio à la manière 
+                d'un talkie walkie. 
+            </p>
+            <div class="button">
+                <a href="https://github.com/Vrock691/RadioTalk">Code source</a>
+            </div>
+        </div>
+        <div class="project" id="sco2">
+            <div class="title">
+                <img src="./assets/sco2/LOGO_SCO2.png" alt="">
+                <p>SCO2</p>
+            </div>
+            <p>SCO2 est une application Flutter et un projet universitaire disponible en code source ouvert sur le compte
+                Github <a href="https://github.com/VLD-dev-team/Social-Co2">VLD-dev-team/Social-Co2</a>.
+            </p>
+            <div class="button">
+                <a href="https://app.social-co2.vld-group.com/">Site internet public</a>
+            </div>
+        </div>
         <div class="project" id="vldschool">
             <div class="title">
                 <img src="./assets/vld/logopngwhite.png" alt="">
